--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vue-count-to": "1.0.13",
+    "vuex": "3.1.0",
+    "echarts": "4.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
